<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Controk App</string>
    <string name="client_list_title">Clients</string>
    <string name="client_creation_title">Client creation</string>
    <string name="employee_title">Employees</string>
    <string name="supplier_title">Suppliers</string>
    <string name="product_title">Products</string>
    <string name="stock_title">Stock</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="cpf">CPF</string>
    <string name="observations">Observations</string>
    <string name="phone">Phone</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="email">Email</string>
    <string name="address_label">Address Information</string>
    <string name="place_name">Place name</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="number">Number</string>
    <string name="complement">Complement</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="cep">CEP</string>

    <string-array name="menu_entries">
        <item name="employees">@string/client_list_title</item>
        <item name="employees">@string/employee_title</item>
        <item name="suppliers">@string/supplier_title</item>
        <item name="products">@string/product_title</item>
        <item name="stock">@string/stock_title</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_creation_title">Address Creation</string>
    <string name="contact_creation_title">Contact Creation</string>
    <string name="web_socket_host">http://controk-wsck.herokuapp.com/</string>
    <string name="employee_list_title">Employees</string>
    <string name="role">Role</string>
    <string name="employee_creation_title">Employee Creation</string>
</resources>
